fix: Update Dockerfile to copy specific application directories and adjust import paths in main.py

--- a/dis/Dockerfile
+++ b/dis/Dockerfile
@@ -22,7 +22,7 @@ COPY dis/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
-COPY . .
+COPY dis .
 COPY shared /app/shared
 
 # Expose the port the application runs on
