--- a/geo-api/Dockerfile
+++ b/geo-api/Dockerfile
@@ -22,7 +22,7 @@ COPY geo-api/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
-COPY . .
+COPY geo-api .
 COPY shared /app/shared
 
 # Expose the port the application runs on
