--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,93 +1,138 @@
 services:
+  # =========================================================
+  # 🔹 BASE BUILD IMAGES (BUILD ONLY – NOT RUNTIME SERVICES)
+  # =========================================================
 
   python-base:
+    image: crop-python-base:latest
+    pull_policy: never
     build:
       context: .
       dockerfile: docker/python-base.Dockerfile
-    image: crop-python-base
 
   python-geo-base:
+    image: crop-python-geo-base:latest
+
+    pull_policy: never
     build:
       context: .
       dockerfile: docker/python-geo-base.Dockerfile
-    image: crop-python-geo-base
-    depends_on:
-      - python-base
 
-  python-wheels:
-    build:
-      context: .
-      dockerfile: docker/python-wheels.Dockerfile
-    image: crop-python-wheels
-    depends_on:
-      - python-geo-base
+  # =========================================================
+  # 🔹 INFRASTRUCTURE
+  # =========================================================
 
   postgres:
     image: postgis/postgis:16-3.4
     container_name: dss_postgres
+    restart: always
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: dss_db
+    volumes:
+      - ./database/init_postgis.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U user -d dss_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   minio:
     image: quay.io/minio/minio:RELEASE.2023-10-25T06-33-25Z
+    container_name: minio_s3
+    restart: always
+    environment:
+      MINIO_ROOT_USER: minio_user
+      MINIO_ROOT_PASSWORD: minio_password
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
     ports:
       - "9000:9000"
       - "9001:9001"
-    command: server /data --console-address ":9001"
+
+  # =========================================================
+  # 🔹 APPLICATION SERVICES
+  # =========================================================
 
   geo-api:
+    container_name: geo_api
+    restart: always
     build:
       context: .
       dockerfile: geo-api/Dockerfile
+    environment:
+      DATABASE_URL: postgresql+psycopg2://user:password@postgres/dss_db
+      ML_API_URL: http://ml-api:8000
+      MINIO_ENDPOINT: http://minio:9000
+      MINIO_ACCESS_KEY: minio_user
+      MINIO_SECRET_KEY: minio_password
+    volumes:
+      - ./backend/DATA:/app/DATA
+    ports:
+      - "8000:8000"
     depends_on:
-      python-wheels:
-        condition: service_completed_successfully
       postgres:
         condition: service_healthy
       minio:
         condition: service_started
-    ports:
-      - "8000:8000"
 
   ml-api:
+    container_name: ml_api
+    restart: always
     build:
       context: .
       dockerfile: ml-api/Dockerfile
-    depends_on:
-      python-wheels:
-        condition: service_completed_successfully
-      postgres:
-        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql+psycopg2://user:password@postgres/dss_db
     ports:
       - "8001:8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
 
   dis:
+    container_name: dis_service
+    restart: always
     build:
       context: .
       dockerfile: dis/Dockerfile
+    environment:
+      DATABASE_URL: postgresql+psycopg2://user:password@postgres/dss_db
+      MINIO_ENDPOINT: http://minio:9000
+      MINIO_ACCESS_KEY: minio_user
+      MINIO_SECRET_KEY: minio_password
+      S3_BUCKET_NAME: dss-cogs
+    ports:
+      - "8002:8000"
     depends_on:
-      python-wheels:
-        condition: service_completed_successfully
       postgres:
         condition: service_healthy
       minio:
         condition: service_started
-    ports:
-      - "8002:8000"
+
+  # =========================================================
+  # 🔹 FRONTEND
+  # =========================================================
 
   frontend:
+    container_name: frontend_app
+    restart: always
     build:
       context: ./frontend
+    environment:
+      VITE_GEO_API_URL: http://geo-api:8000/v1
     ports:
       - "3000:80"
     depends_on:
       - geo-api
+
+# =========================================================
+# 🔹 VOLUMES
+# =========================================================
 
 volumes:
   minio_data:
