--- a/geo-api/Dockerfile
+++ b/geo-api/Dockerfile
@@ -1,5 +1,5 @@
 # ===============================
-# Wheels builder
+# Stage 1: Wheels builder
 # ===============================
 FROM crop-dss-base AS wheels
 
@@ -10,7 +10,7 @@ ENV GDAL_CONFIG=/usr/bin/gdal-config \
 
 RUN python -m pip install --upgrade pip setuptools wheel
 
-# PRE-INSTALL build dependencies manually with high timeout
+# PRE-INSTALL build dependencies manually to avoid isolated network drops
 RUN pip install --timeout 120 --retries 10 \
     "setuptools>=67.8" \
     "wheel" \
@@ -19,9 +19,35 @@ RUN pip install --timeout 120 --retries 10 \
 
 COPY geo-api/requirements.txt .
 
-# Build wheels with isolation turned off
+# Build the wheels
 RUN pip wheel --no-cache-dir --wheel-dir=/wheels \
     --timeout 120 --retries 10 \
     --no-build-isolation \
     --no-binary rasterio \
     -r requirements.txt
+
+# ===============================
+# Stage 2: Runtime image
+# ===============================
+FROM crop-dss-base
+
+WORKDIR /app
+
+# Copy the built wheels from the first stage
+COPY --from=wheels /wheels /wheels
+COPY geo-api/requirements.txt .
+
+# Install from local wheels (No internet needed)
+RUN pip install --no-index --find-links=/wheels -r requirements.txt
+
+# Copy the app code
+COPY geo-api .
+COPY shared ./shared
+
+ENV GUNICORN_WORKERS=3
+
+# This is the line that was missing!
+CMD gunicorn main:app \
+  --workers ${GUNICORN_WORKERS} \
+  --worker-class uvicorn.workers.UvicornWorker \
+  --bind 0.0.0.0:8000
