--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
 services:
-  # ===============================
-  # Infrastructure
-  # ===============================
   postgres:
     image: postgis/postgis:16-3.4
     container_name: dss_postgres
@@ -16,11 +13,10 @@ services:
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U user -d dss_db"]
-      interval: 5s
+      interval: 10s
       timeout: 5s
-      retries: 5
-      start_period: 30s # Add this: gives it 30s of grace time before checking
-
+      retries: 10
+      start_period: 60s
 
   minio:
     image: quay.io/minio/minio:RELEASE.2023-10-25T06-33-25Z
@@ -36,16 +32,13 @@ services:
       - "9000:9000"
       - "9001:9001"
 
-  # ===============================
-  # APIs
-  # ===============================
   geo-api:
     build:
       context: .
       dockerfile: geo-api/Dockerfile
-      network: host # <--- Correctly Indented Now
+      network: host
+    image: crop-yield-dss-geo-api # Explicit name
     container_name: geo_api
-    restart: always
     depends_on:
       postgres:
         condition: service_healthy
@@ -53,12 +46,7 @@ services:
         condition: service_started
     environment:
       DATABASE_URL: postgresql+psycopg2://user:password@postgres/dss_db
-      ML_API_URL: http://ml-api:8000
       MINIO_ENDPOINT: http://minio:9000
-      MINIO_ACCESS_KEY: minio_user
-      MINIO_SECRET_KEY: minio_password
-    volumes:
-      - ./backend/DATA:/app/DATA
     ports:
       - "8000:8000"
 
@@ -66,14 +54,12 @@ services:
     build:
       context: .
       dockerfile: ml-api/Dockerfile
-      network: host # <--- Correctly Indented Now
+      network: host
+    image: crop-yield-dss-ml-api
     container_name: ml_api
-    restart: always
     depends_on:
       postgres:
         condition: service_healthy
-    environment:
-      DATABASE_URL: postgresql+psycopg2://user:password@postgres/dss_db
     ports:
       - "8001:8000"
 
@@ -81,34 +67,22 @@ services:
     build:
       context: .
       dockerfile: dis/Dockerfile
-      network: host # <--- Correctly Indented Now
+      network: host
+    image: crop-yield-dss-dis
     container_name: dis_service
-    restart: always
     depends_on:
       postgres:
         condition: service_healthy
       minio:
         condition: service_started
-    environment:
-      DATABASE_URL: postgresql+psycopg2://user:password@postgres/dss_db
-      MINIO_ENDPOINT: http://minio:9000
-      MINIO_ACCESS_KEY: minio_user
-      MINIO_SECRET_KEY: minio_password
-      S3_BUCKET_NAME: dss-cogs
     ports:
       - "8002:8000"
 
-  # ===============================
-  # Frontend
-  # ===============================
   frontend:
     build:
       context: ./frontend
-      network: host # <--- Correctly Indented Now
+      network: host
     container_name: frontend_app
-    restart: always
-    environment:
-      VITE_GEO_API_URL: http://geo-api:8000/v1
     ports:
       - "3000:80"
     depends_on:
