--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,15 +78,22 @@ services:
     ports:
       - "8002:8000"
 
-  frontend:
+frontend:
     build:
       context: ./frontend
       network: host
     container_name: frontend_app
     ports:
-      - "3000:80"
+      - "3000:3000"  
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    command: npm start
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       - geo-api
-
+      - ml-api
+      - dis
 volumes:
   minio_data:
