feat: Implement CORS middleware, enhance API endpoints, and improve data handling in frontend components

--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -10,22 +10,17 @@ ENV GDAL_CONFIG=/usr/bin/gdal-config
 RUN python -m pip install --upgrade pip setuptools wheel
 
 RUN pip install --timeout 1000 --retries 20 \
-    "setuptools>=67.8" \
-    "wheel" \
-    "cython~=3.0.0" \
-    "numpy>=2.0.0"
+    "setuptools>=67.8" "wheel" "cython~=3.0.0" "numpy>=2.0.0"
 
 COPY ml_api/requirements.txt .
-
-RUN pip wheel --no-cache-dir --wheel-dir=/wheels \
-    --timeout 1000 --retries 20 \
-    -r requirements.txt
+RUN pip wheel --no-cache-dir --wheel-dir=/wheels --timeout 1000 --retries 20 -r requirements.txt
 
 # ===============================
 # Stage 2: Runtime image
 # ===============================
 FROM crop-dss-base
 
+# Mandatory for DSSAT engine
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gfortran && rm -rf /var/lib/apt/lists/*
 
