--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,8 @@ services:
       - "3000:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true   # <--- Add this one too
+      - WDS_SOCKET_PORT=0        # Prevents WebSocket connection errors
       - VITE_GEO_API_URL=http://localhost:8000/v1
     depends_on:
       - geo_api
